--- a/index.html
+++ b/index.html
@@ -367,12 +367,45 @@
             </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
+    <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
                 <svg class="modal-close-icon" width="14"; height="14">
                         <use href="./images/icons.svg#icon-close-btn"></use>
                         </svg>
                         </button>
+                        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+                        <form>
+                            <div class="madal-field">
+                            <label class="modal-label">Имя</label>
+                            <input type="text" class= "modal-input" 
+                            name="user-name" 
+                            required>
+                            </div>
+                            <div class="madal-field">
+                            <label class="modal-label">Телефон</label>
+                            <input type="tel" class= "modal-input" 
+                            name="user-tel"
+                            pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"
+                            required>
+                            </div>
+                            <div class="madal-field">
+                            <label class="modal-label">Почта</label>
+                            <input type="email" class= "modal-input" 
+                            name="user-mail" 
+                            required>
+                            </div>
+
+                            <div class="madal-field">
+                            <label class="modal-label" for="user-text">Комментарий</label>
+                            <textarea name="user-text" 
+                            id="user-text" 
+                            placeholder="Введите текст" 
+                            class="modal-text"
+                            ></textarea>
+                            </div>
+
+                            <button type="submit">Отправить</button>
+                        </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
