--- a/index.html
+++ b/index.html
@@ -377,22 +377,37 @@
                         <form>
                             <div class="madal-field">
                             <label class="modal-label">Имя</label>
+                            <div class="modal-input-wrap">
                             <input type="text" class= "modal-input" 
                             name="user-name" 
                             required>
+                            <svg class="input-icon" width="18"; height="18">
+                                <use href="./images/icons.svg#icon-person-black1"></use>
+                            </svg>
+                            </div>
                             </div>
                             <div class="madal-field">
                             <label class="modal-label">Телефон</label>
+                            <div class="modal-input-wrap">
                             <input type="tel" class= "modal-input" 
                             name="user-tel"
                             pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"
                             required>
+                            <svg class="input-icon" width="18"; height="18">
+                                <use href="./images/icons.svg#icon-phone-black1"></use>
+                            </svg>
+                            </div>
                             </div>
                             <div class="madal-field">
                             <label class="modal-label">Почта</label>
+                            <div class="modal-input-wrap">
                             <input type="email" class= "modal-input" 
                             name="user-mail" 
                             required>
+                            <svg class="input-icon" width="18"; height="18">
+                                <use href="./images/icons.svg#icon-email-black1"></use>
+                            </svg>
+                            </div>
                             </div>
 
                             <div class="madal-field">
@@ -404,7 +419,19 @@
                             ></textarea>
                             </div>
 
-                            <button type="submit">Отправить</button>
+                            <div class="madal-field">
+                                <input type="checkbox" 
+                                class="input-check visually-hidden" 
+                                id="input-check" 
+                                name="policy"
+                                value="policy">
+                                <label 
+                                for="input-check" 
+                                class="check-text">
+                                Соглашаюсь с рассылкой и принимаю <a href="/" class="policy-link">Условия договора</a></label>
+                            </div>
+
+                            <button type="submit" class="madal-submit">Отправить</button>
                         </form>
         </div>
     </div>
