--- a/index.html
+++ b/index.html
@@ -364,7 +364,24 @@
                             </li>
                         </ul>
             </div>
+            <div class="footer-input">
+            <h3 class="footer-connection">Подпишитесь на рассылку</h3>
+                <div class="footer-input-wrap">
+                <input type="email" class= "footer-input" 
+                name="user-mail"
+                placeholder="E-mail"
+                required>
+                </div>
+                <div class="footer-submit-btn">
+                <button type="submit" class="footer-submit">Подписаться
+                    <svg class="icon-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+            </svg></button>
             </div>
+            </div>
+
+        </form>
+        </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
     <div class="modal">
@@ -430,8 +447,10 @@
                                 class="check-text">
                                 Соглашаюсь с рассылкой и принимаю <a href="/" class="policy-link">Условия договора</a></label>
                             </div>
-
+                            <div class="madal-button">
+        
                             <button type="submit" class="madal-submit">Отправить</button>
+                            </div>
                         </form>
         </div>
     </div>
