--- a/index.html
+++ b/index.html
@@ -364,24 +364,24 @@
                             </li>
                         </ul>
             </div>
-            <div class="footer-input">
-            <h3 class="footer-connection">Подпишитесь на рассылку</h3>
-                <div class="footer-input-wrap">
-                <input type="email" class= "footer-input" 
-                name="user-mail"
-                placeholder="E-mail"
-                required>
-                </div>
-                <div class="footer-submit-btn">
-                <button type="submit" class="footer-submit">Подписаться
-                    <svg class="icon-send" width="24" height="24">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-            </svg></button>
+            <form class="subscription-form">
+            <label class="thumb-text subscription-label" for="subscription">Подпишитесь на рассылку</label>
+            <div class="subscription-box">
+            <input class="subscription-input"
+            type="text" 
+            name="subscription"
+            id="subscription"
+            placeholder="E-mail"
+            required/>
+                <button type="submit" class="subscription-btn button">Подписаться
+                    <svg class="submit-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
             </div>
-            </div>
-
-        </form>
+            </form>
         </div>
+    </footer>
     </footer>
     <div class="backdrop is-hidden" data-modal>
     <div class="modal">
