--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,23 @@
                             </li>
                         </ul>
             </div>
+            <form class="subscription-form">
+            <label class="thumb-text subscription-label" for="subscription">Подпишитесь на рассылку</label>
+            <div class="subscription-box">
+            <input class="subscription-input"
+            type="text" 
+            name="subscription"
+            id="subscription"
+            placeholder="E-mail"
+            required/>
+                <button type="submit" class="subscription-btn button">Подписаться
+                    <svg class="submit-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
             </div>
+            </form>
+        </div>
     </footer>
 </body>
 </html>
