--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                             ></textarea>
                             </div>
 
-                            <div class="madal-field">
+                            <div class="modal-check" >
                                 <input type="checkbox" 
                                 class="input-check visually-hidden" 
                                 id="input-check" 
