--- a/index.html
+++ b/index.html
@@ -435,17 +435,17 @@
                             ></textarea>
                             </div>
 
-                            <div class="modal-check" >
-                                <input type="checkbox" 
-                                class="input-check visually-hidden" 
-                                id="input-check" 
-                                name="policy"
-                                value="policy">
-                                <label 
-                                for="input-check" 
-                                class="check-text">
-                                Соглашаюсь с рассылкой и принимаю <a href="/" class="policy-link">Условия договора</a></label>
-                            </div>
+                        <div class="modal-field">
+                            <input 
+                            type="checkbox" 
+                            class="input-check visually-hidden" 
+                            id="input-check" 
+                            name="policy" 
+                            value="policy">
+                        <label for="input-check" class="check-text">Соглашаюсь с рассылкой и принимаю <a href="/" class="policy"> Условия договора</a>
+                            </label>
+                        </div>
+
                             <div class="madal-button">
         
                             <button type="submit" class="madal-submit">Отправить</button>
