--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul class="benefits-lists list">
                 <li class="benefits-list">
                     <div class="benefits-logo benefits-logo-border">
-                                <svg class="benefits-logo-icon" width="70"; height="70">
+                                <svg class= "benefits-logo-icon" width="70" height="70">
                                     <use href="./images/icons.svg#icon-antenna"></use>
                                 </svg>
                         </div>
@@ -59,7 +59,7 @@
                 </li>
                 <li class="benefits-list">
                     <div class="benefits-logo benefits-logo-border">
-                                <svg class="benefits-logo-icon" width="70"; height="70">
+                                <svg class="benefits-logo-icon" width="70" height="70">
                                     <use href="./images/icons.svg#icon-clock"></use>
                                 </svg>
                     </div>
@@ -68,7 +68,7 @@
                 </li>
                 <li class="benefits-list">
                     <div class="benefits-logo benefits-logo-border">
-                                <svg class="benefits-logo-icon" width="70"; height="70">
+                                <svg class="benefits-logo-icon" width="70" height="70">
                                     <use href="./images/icons.svg#icon-diagram"></use>
                                 </svg>
                         </div>
@@ -77,7 +77,7 @@
                 </li>
                 <li class="benefits-list">
                     <div class="benefits-logo benefits-logo-border">
-                                <svg class="benefits-logo-icon" width="70"; height="70">
+                                <svg class="benefits-logo-icon" width="70" height="70">
                                     <use href="./images/icons.svg#icon-astronaut"></use>
                                 </svg>
                     </div>
@@ -93,19 +93,19 @@
             <ul class="specialization-items">
                 <li class="specialization-list list">
                     <div class="specialization-img-wrap">
-                    <img src="./images/tablet.jpg" alt="tablet" width="370px">
+                    <img src="./images/tablet.jpg" alt="tablet" width="370">
                 <h3 class="specialization-img-descr">Десктопные приложения</h3>
                 </div>
                 </li>
                 <li class="specialization-list list">
                     <div class="specialization-img-wrap">
-                    <img src="./images/mobile.jpg" alt="mobile" width="370px">
+                    <img src="./images/mobile.jpg" alt="mobile" width="370">
                 <h3 class="specialization-img-descr">Мобильные приложения</h3>
                 </div>
                 </li>
                 <li class="specialization-list list">
                     <div class="specialization-img-wrap">
-                    <img src="./images/palette.jpg" alt="palette" width="370px">
+                    <img src="./images/palette.jpg" alt="palette" width="370">
                 <h3 class="specialization-img-descr">Дизайнерские решения</h3>
                 </div>
                 </li>
@@ -124,28 +124,28 @@
                         <ul class="team-soc-list list">
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -161,28 +161,28 @@
                         <ul class="team-soc-list list">
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -198,28 +198,28 @@
                         <ul class="team-soc-list list">
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -235,28 +235,28 @@
                         <ul class="team-soc-list list">
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-soc-item">
                                 <a href="" class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20"; height="20"">
+                                    <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -274,46 +274,47 @@
                <ul class="clients-items list">
                    <li class="clients-item">
                        <a href="" class="clients-link">
-                           <svg class="clients-logo" width="106"; height="60">
+                           <svg class="clients-logo" width="106" height="60">
                                <use href="./images/icons.svg#icon-Logo-1"></use>
                            </svg>
                        </a>
                    </li>
                    <li class="clients-item">
                        <a href="" class="clients-link">
-                           <svg class="clients-logo" width="106"; height="60">
+                           <svg class="clients-logo" width="106" height="60">
                                <use href="./images/icons.svg#icon-Logo-2"></use>
                            </svg>
                        </a>
                    </li>
                    <li class="clients-item">
                        <a href="" class="clients-link">
-                           <svg class="clients-logo" width="106"; height="60">
+                           <svg class="clients-logo" width="106" height="60">
                                <use href="./images/icons.svg#icon-Logo-3"></use>
                            </svg>
                        </a>
                    </li>
                    <li class="clients-item">
                        <a href="" class="clients-link">
-                           <svg class="clients-logo" width="106"; height="60">
+                           <svg class="clients-logo" width="106" height="60">
                                <use href="./images/icons.svg#icon-Logo-4"></use>
                            </svg>
                        </a>
                    </li>
                    <li class="clients-item">
                        <a href="" class="clients-link">
-                           <svg class="clients-logo" width="106"; height="60">
+                           <svg class="clients-logo" width="106" height="60">
                                <use href="./images/icons.svg#icon-Logo-5"></use>
                            </svg>
                        </a>
                    </li>
                    <li class="clients-item">
                        <a href="" class="clients-link">
-                           <svg class="clients-logo" width="106"; height="60">
+                           <svg class="clients-logo" width="106" height="60">
                                <use href="./images/icons.svg#icon-Logo-6"></use>
                            </svg>
                        </a>
                    </li>
+                </ul>
             </div>
             </div>
         </section>
@@ -336,28 +337,28 @@
                 <ul class="footer-soc-list list">
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -385,7 +386,7 @@
     <div class="backdrop is-hidden" data-modal>
     <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
-                <svg class="modal-close-icon" width="14"; height="14">
+                <svg class="modal-close-icon" width="14" height="14">
                         <use href="./images/icons.svg#icon-close-btn"></use>
                         </svg>
                         </button>
@@ -397,7 +398,7 @@
                             <input type="text" class= "modal-input" 
                             name="user-name" 
                             required>
-                            <svg class="input-icon" width="18"; height="18">
+                            <svg class="input-icon" width="18" height="18">
                                 <use href="./images/icons.svg#icon-person-black1"></use>
                             </svg>
                             </div>
@@ -409,7 +410,7 @@
                             name="user-tel"
                             pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"
                             required>
-                            <svg class="input-icon" width="18"; height="18">
+                            <svg class="input-icon" width="18" height="18">
                                 <use href="./images/icons.svg#icon-phone-black1"></use>
                             </svg>
                             </div>
@@ -420,7 +421,7 @@
                             <input type="email" class= "modal-input" 
                             name="user-mail" 
                             required>
-                            <svg class="input-icon" width="18"; height="18">
+                            <svg class="input-icon" width="18" height="18">
                                 <use href="./images/icons.svg#icon-email-black1"></use>
                             </svg>
                             </div>
