--- a/portfolio.html
+++ b/portfolio.html
@@ -177,28 +177,28 @@
                 <ul class="footer-soc-list list">
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="footer-soc-item">
                                 <a href="" class="footer-soc-link">
-                                    <svg class="footer-soc-icon" width="20"; height="20"">
+                                    <svg class="footer-soc-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
